--- a/Data Visualization (creating plots)/MULTI-GRAPH_cuml_masterthesis_classification_darts.ipynb
+++ b/Data Visualization (creating plots)/MULTI-GRAPH_cuml_masterthesis_classification_darts.ipynb
@@ -61,8 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read Data\n",
-    "Let's start by reading two time series - one containing the monthly number of air passengers, and another containing the monthly milk production per cow. These time series have not much to do with each other, except that they both have a monthly frequency with a marked yearly periodicity and upward trend, and (completely coincidentaly) they contain values of a comparable order of magnitude."
+    "### Read Data\n"
    ]
   },
   {
